# schema-test

schematesta/: meson.build  org.ubuntubudgie.applet.schematesta.gschema.xml
schematesta/src/: SchemaTestA.plugin  meson.build  schematesta.vala
schematestb/: meson.build  org.ubuntubudgie.applet.schematestb.gschema.xml
schematestb/src/: SchemaTestB.plugin  meson.build  schematestb.vala
